--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "primevue": "^4.1.1",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
